alignment issue fix

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -61,7 +61,7 @@ td.reorder{
     width: 234px !important;
 }
 .icons {
-    margin-right: 14px;
+    margin-right: 9px;
     cursor: pointer;
     margin-top: 10px;
 }
